--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,10 +21,11 @@
 		* {
 			margin: 0;
 			padding: 0;
-			font-family: 'Fira Code';
+			font-family: 'Fira Code' monospace;
 			font-variant-ligatures:common-ligatures;
 		}
 		#app{
+			padding: 0;
 			position: absolute;
 			width: 100%;
 			height: 100%;
