--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,8 @@
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
 		crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="./src/assets/menus.css">
+	<script src="https://kit.fontawesome.com/13239b6dc8.js" crossorigin="anonymous"></script>
     <!-- HTML -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/firacode@6.2.0/distr/fira_code.css">
 	<title>Vite App</title>
